[gd_scene load_steps=12 format=3 uid="uid://ctsn7o2n6uvax"]

[ext_resource type="Script" path="res://game_3d.gd" id="1_ehh40"]
[ext_resource type="PackedScene" uid="uid://ds8ndwscr4qxv" path="res://Entities/player_3d.tscn" id="1_s55kr"]
[ext_resource type="PackedScene" uid="uid://cai22rxj77yjc" path="res://Entities/boss_3d.tscn" id="2_84vt1"]
[ext_resource type="PackedScene" uid="uid://daooo5gtm4c7v" path="res://Levels/level_13d.tscn" id="4_doyms"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_r46gw"]
plane = Plane(2.08165e-12, 2.08165e-12, 1, 2.08165e-12)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_6wcfq"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_wfyt5"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_2b067"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ggldj"]

[sub_resource type="Sky" id="Sky_8pq1l"]
sky_material = SubResource("ProceduralSkyMaterial_ggldj")

[sub_resource type="Environment" id="Environment_fiucn"]
background_mode = 2
sky = SubResource("Sky_8pq1l")
ambient_light_source = 3
fog_enabled = true
fog_density = 0.0001

[node name="Game3D" type="Node3D"]
script = ExtResource("1_ehh40")

[node name="PlayableArea" type="Node3D" parent="."]

[node name="Player3D" parent="PlayableArea" groups=["player"] instance=ExtResource("1_s55kr")]
transform = Transform3D(7, 0, 0, 0, 7, 0, 0, 0, 7, 0, 7, 0)

[node name="Boss3D" parent="PlayableArea" instance=ExtResource("2_84vt1")]
transform = Transform3D(-40, 1.39515e-14, -3.49691e-06, 1.39515e-14, 40, -1.39515e-14, 3.49691e-06, -1.39515e-14, -40, 0, 40, -69.7001)

[node name="ForwardWall" type="StaticBody3D" parent="PlayableArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, -300)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayableArea/ForwardWall"]
transform = Transform3D(100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0)
shape = SubResource("WorldBoundaryShape3D_r46gw")

[node name="LeftWall" type="StaticBody3D" parent="PlayableArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -300, 2.08165e-12, 2.08165e-12)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayableArea/LeftWall"]
transform = Transform3D(-4.37114e-06, 100, 3.48787e-14, -100, -4.37114e-06, -3.48787e-14, -3.48787e-14, -3.48787e-14, 100, 0, 0, 0)
shape = SubResource("WorldBoundaryShape3D_6wcfq")

[node name="RightWall" type="StaticBody3D" parent="PlayableArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 300, 2.08165e-12, 2.08165e-12)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayableArea/RightWall"]
transform = Transform3D(-4.37114e-06, -100, 3.48787e-14, 100, -4.37114e-06, -3.48787e-14, 3.48787e-14, 3.48787e-14, 100, 0, 0, 0)
shape = SubResource("WorldBoundaryShape3D_wfyt5")

[node name="LowerWall" type="StaticBody3D" parent="PlayableArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 300)

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayableArea/LowerWall"]
transform = Transform3D(100, 0, -1.5246e-21, -1.5246e-21, -4.37114e-06, -100, 0, 100, -4.37114e-06, 0, 0, 0)
shape = SubResource("WorldBoundaryShape3D_2b067")

[node name="Level13D" parent="." instance=ExtResource("4_doyms")]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 2.08165e-12, 2.08165e-12, -1500)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_fiucn")

[connection signal="boss_died" from="PlayableArea/Boss3D" to="." method="_on_boss_3d_boss_died"]
